Reorganizando o estilo do componente Footer

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,31 +1,29 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  font: 400 30px Robot,sans-serif;
+}
+
 #footer {
 	display: flex;
 	position: absolute;
 	align-items: center;
 	flex-direction: row;
 	justify-content: space-between;
-	/*margin: 15px;*/
-	width: 100%;
 	height: 352px;
+	width: 100vw;
 	left: 0px;
 	bottom: 0px;
 	top: 1873px;
 	background: #60696b;
 }
 
-#footer > div {
-  margin: 15px;
-  padding: 10px;
-}
-
+/*Redes Sociais*/
 #group-1 {
-	/*position: absolute;*/
 	flex-direction: column;
 	display: flex;
-	/*justify-content: center;*/
 	align-items: center;
 	width: 291px;
-	height: 220.92px;
 	left: 101px;
 	top: 71.7px;
 	bottom: 1007px;
@@ -33,44 +31,34 @@
 
 #group-1 h2 {
 	position: absolute;	
-	/*font-family: Roboto;*/
 	font-style: normal;
 	font-weight: bold;
-	font-size: 45px;
-	line-height: 53px;
+	line-height: 90px;
 	text-align: left;
 	color: #fbc531;
 }
 
 #group-1 h2 {
 	width: 221px;
-	border-bottom: 10px solid #fbc531;
-	min-width: 70px;
-	min-height: 70px;
-	transform: matrix(1, 0, 0, 1, 0, 0);
+	border-bottom: 10px solid;
 }
 
 #group-1 #instagram {
-	/*
 	flex-direction: row;
-	background: pink;
-	*/
 	justify-content: space-between;
 }
-/*
+
 #group-1 #twitter {
+	flex-direction: row;
 	flex-direction: column-reverse;
 }
-*/
 
 .contact {
-	/*display: flex;*/
 	flex-direction: column;
 	padding-top: 110px;
 }
 
 .contact img {
-	/*flex-direction: column-reverse;*/
 	height: 48.83%;
 	left: 9.44%;
 	right: 87.78%;
@@ -80,9 +68,8 @@
 .contact a {
 	font-style: normal;
 	font-weight: bold;
-	font-size: 30px;
-	line-height: 35px;
-	text-align: left;
+	line-height: 10px;
+	text-align: center;
 	text-decoration: none;
 	color: #fffdfd;
 }
@@ -100,11 +87,8 @@
 }
 
 #group-2 h1 {
-	/*position: absolute;*/	
-	/*font-family: Roboto;*/
 	font-style: normal;
 	font-weight: bold;
-	font-size: 45px;
 	line-height: 53px;
 	text-align: left;
 	color: #ffffff;	
@@ -115,7 +99,7 @@
 }
 
 #group-2 #attendance-title {
-	border-bottom: 10px solid #ffffff;
+	border-bottom: 10px solid;
 }
 
 /*Duvidas*/
@@ -124,8 +108,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;	
+	width: 291px;
+	right: 101px;
+	top: 71.7px;
+	bottom: 1007px;
 }
 
 #group-3 h1 {
 	color: #ffffff;	
+	font-style: normal;
+	font-weight: bold;
 }
